--- a/package.json
+++ b/package.json
@@ -47,6 +47,17 @@
     "react-dom": "^16.13.1",    
     "react-hot-loader": "^4.12.21",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "file-loader": "^6.0.0",
+    "nodemon": "2.0.2",
+    "webpack": "^4.44.1", 
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^2.5.0"
   }
 }
